observability-hub/tls-otel-collector-grpc-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: observability.ingest
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: otelcol-collector
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: 0.63.1
  name: tls-otel-collector-grpc
  namespace: observability
spec:
  host: otlp-grpc.apps.open-svc-sts.k1wl.p1.openshiftapps.com
  port:
    targetPort: otlp-grpc
  tls:
    termination: edge
  to:
    kind: Service
    name: ingest-collector-grpc
    weight: 100
  wildcardPolicy: None
