observability-hub/tls-otel-collector-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: observability.ingest
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry
  name: tls-otel-collector
  namespace: observability
spec:
  # host: otlp-https.base_domain
  host: otlp-https.apps.rosa.c5r9f-f95bg-org.cy1b.p3.openshiftapps.com
  port:
    targetPort: otlp-http
  tls:
    termination: edge
  to:
    kind: Service
    name: ingest-collector
    weight: 100
  wildcardPolicy: None
